[package]
name = "webnieuws-service"
version = "0.1.0"
authors = ["Ben Morrison <ben@gbmor.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
ctrlc = "^3.1"
log = "^0.4"
rusqlite = "^0.20"
serde = "^1.0.99"
simplelog = "^0.7"
