[package]
name = "webnieuws-service"
version = "0.1.0"
authors = ["Ben Morrison <ben@gbmor.dev>"]
edition = "2018"

[dependencies]
chrono = "^0.4"
ctrlc = "^3.1"
lazy_static = "^1.4"
log = "^0.4"
parking_lot = "^0.9"
rusqlite = "^0.20"
serde_json = "^1.0.40"
simplelog = "^0.7"
tokio = "^0.1.22"
tokio-io = "^0.1"

[dependencies.serde]
version = "^1.0.99"
features = ["std", "derive"]